--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 # === DATABASE CONFIG ===
-spring.datasource.url=jdbc:mysql://localhost:3306/skillhub_db
-spring.datasource.username=root
-spring.datasource.password=admin
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 
 # === JPA CONFIG ===
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 # === SERVER CONFIG ===
 server.port=8080
@@ -24,8 +24,7 @@ spring.mail.from=skillhub.reset@gmail.com
 app.frontend.url=http://localhost:5173
 
 # === IMAGE UPLOAD CONFIG ===
-upload.path=/Users/nigamchaudhary/uploads
+upload.path=uploads  # Use relative path for deployment
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
-
