--- a/pom.xml
+++ b/pom.xml
@@ -97,12 +97,12 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-<!--        <dependency>-->
-<!--            <groupId>com.skillhub.backend</groupId>-->
-<!--            <artifactId>demo</artifactId>-->
-<!--            <version>0.0.1-SNAPSHOT</version>-->
-<!--        </dependency>-->
-    </dependencies>
+        <dependency>
+            <groupId>com.skillhub.backend</groupId>
+            <artifactId>demo</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+    </dependencies>1
 
 	<build>
 		<plugins>
