--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # === DATABASE CONFIG ===
-spring.datasource.url=${DB_URL}
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
+spring.datasource.url=jdbc:mysql://localhost:3306/skillhub_db?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.datasource.username=root
+spring.datasource.password=admin
 
 # === JPA CONFIG ===
 spring.jpa.hibernate.ddl-auto=update
@@ -24,7 +24,7 @@ spring.mail.from=skillhub.reset@gmail.com
 app.frontend.url=http://localhost:5173
 
 # === IMAGE UPLOAD CONFIG ===
-upload.path=uploads  # Use relative path for deployment
+upload.path=/Users/nigamchaudhary/uploads
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
