--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # === DATABASE CONFIG ===
-spring.datasource.url=jdbc:mysql://localhost:3306/skillhub_db?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
-spring.datasource.username=root
-spring.datasource.password=admin
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 
 # === JPA CONFIG ===
 spring.jpa.hibernate.ddl-auto=update
@@ -14,17 +14,17 @@ server.port=8080
 # === GMAIL SMTP CONFIG ===
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=skillhub.reset@gmail.com
-spring.mail.password=assj zdgc smeg vyzh
+spring.mail.username=${SMTP_USERNAME}
+spring.mail.password=${SMTP_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.from=skillhub.reset@gmail.com
+spring.mail.from=${SMTP_USERNAME}
 
 # === FRONTEND BASE URL ===
-app.frontend.url=http://localhost:5173
+app.frontend.url=${FRONTEND_BASE_URL}
 
 # === IMAGE UPLOAD CONFIG ===
-upload.path=/Users/nigamchaudhary/uploads
+upload.path=/app/uploads
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
