Update WebMvcConfig and application.properties for portable uploads path

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,7 +24,7 @@ spring.mail.from=${SMTP_USERNAME}
 app.frontend.url=${FRONTEND_BASE_URL}
 
 # === IMAGE UPLOAD CONFIG ===
-upload.path=/app/uploads
+upload.path=uploads
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
